--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="menu-bar">
-            <p class="portfolio-name">Hannah</p>
+            <p class="portfolio-name"><span style="color:#FF7518">Han</span>nah</p>
             <div class="menu-list">
                 <p>Portfolio</p>
                 <p>Servies</p>
@@ -27,8 +27,8 @@
                     It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software 
                     like Aldus PageMaker including versions of Lorem Ipsum.
                 </p>
-                <button>Hire Me</button>
-                <button>Experience</button>
+                <button style="background-color:black, color:white">Hire Me</button>
+                <button style="background-color:#FF7518, color:white">Experience</button>
             </div>
             <div class="cat-image">
                 <img src="cat.jpg">
