--- a/index.html
+++ b/index.html
@@ -1,39 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Portfolio</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="menu-bar">
-            <p class="portfolio-name"><span style="color:#FF7518">Han</span>nah</p>
-            <div class="menu-list">
-                <p>Portfolio</p>
-                <p>Servies</p>
-                <p>Experience</p>
-                <p>Projects</p>
-                <p>Education</p>
-            </div>
-            <button class="contact-button">Contact us</button>
+  <head>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="menu-bar">
+      <p class="portfolio-name">
+        <strong><span style="color: #ff7518">Han</span>nah</strong>
+      </p>
+      <div class="menu">
+        <p class="menu-list">Portfolio</p>
+        <p class="menu-list">Servies</p>
+        <p class="menu-list">Experience</p>
+        <p class="menu-list">Projects</p>
+        <p class="menu-list">Education</p>
+      </div>
+      <button class="contact-button">Contact us</button>
+    </div>
+
+    <div class="main-text">
+      <div class="inner-box">
+        <div class="text-content">
+          <h2>Hi</h2>
+          <h1>
+            I'm <span style="color: #ff7518">Hannah</span> <br>
+            a Frontend Developer
+          </h1>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. to make a type specimen book. It has survived not only
+            five centuries, but also the leap into electronic typesetting,
+            remaining essentially unchanged. It was popularised in the 1960s
+            with the release.
+          </p>
+          <div>
+            <button class="hire-me">Hire Me</button>
+            <button class="exp">Experience</button>
+          </div>
         </div>
 
-        <div>
-            <div classs="text-content">
-                <h3>Hi</h3>
-                <h1>I'm Hannah a Frontend Developer</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                    to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software 
-                    like Aldus PageMaker including versions of Lorem Ipsum.
-                </p>
-                <button style="background-color:black, color:white">Hire Me</button>
-                <button style="background-color:#FF7518, color:white">Experience</button>
-            </div>
-            <div class="cat-image">
-                <img src="cat.jpg">
-            </div>
+        <div class="img-div">
+          <img class="cat-image" src="cat.jpg" />
         </div>
-
-    </body>
-<html>
+      </div>
+    </div>
+  </body>
+  <html></html>
+</html>
